# fpdf-reporting

./: pyproject.toml
.github/workflows/: ci.yml
src/: generator.py  notion_generator.py  notion_improved.py  notion_with_charts.py
src/ai-slop/: notion_generator.py  notion_improved.py  notion_with_charts.py
src/fpdf_reporting/: cli.py
src/fpdf_reporting/ai-slop/: generator.py
src/fpdf_reporting/model/: report_data.py  style.py  ticket.py
src/fpdf_reporting/rendering/: pdf_generator.py
src/model/: __init__.py  report_data.py  style.py  ticket.py
src/rendering/: graphs.py  pdf_generator.py
tests/: test.py  test_model.py  test_rendering.py
